# fern-python-sdk

./: .gitignore  README.md  pyproject.toml
src/twelvelabs/: __init__.py  base_client.py  environment.py
src/twelvelabs/any_to_video_search/: __init__.py  client.py
src/twelvelabs/classify/: __init__.py  client.py
src/twelvelabs/core/: client_wrapper.py
src/twelvelabs/create_text_embeddings/: __init__.py  client.py
src/twelvelabs/create_text_image_and_audio_embeddings/: client.py
src/twelvelabs/create_video_embeddings/: __init__.py  client.py
src/twelvelabs/engines/: __init__.py  client.py
src/twelvelabs/errors/: __init__.py
src/twelvelabs/extract_video_data/: __init__.py  client.py
src/twelvelabs/generate_text_from_video/: __init__.py  client.py
src/twelvelabs/indexes/: __init__.py  client.py
src/twelvelabs/manage_videos/: __init__.py  client.py
src/twelvelabs/text_to_video_search/: __init__.py  client.py
src/twelvelabs/types/: __init__.py  audio_embedding_response.py  bad_request_error_body.py  classes.py  classes_object.py  classes_object_conversation_option.py  classes_object_options_item.py  classify_clip.py  classify_label.py  classify_label_result.py  classify_page_info.py  conversation_option.py  conversation_option_any_to_video.py  embedding_response.py  embedding_result.py  engine.py  image_embedding_response.py  include_clips.py  index_engines_item.py  index_schema.py  labels.py  max_confidence.py  modules.py  modules_item.py  not_found_error_body.py  options.py  options_classify.py  options_classify_item.py  options_item.py  (+14 more)
(+119 files in other folders)
