[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twelvelabs"
version = "0.1.0"
description = "A Python SDK for My Project"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "requests",  # Add your dependencies here
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",  # For running tests
    "flake8",  # For linting (optional)
]

[project.urls]
"Homepage" = "https://github.com/your_username/my_sdk"
"Documentation" = "https://your_sdk_docs.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["src/my_sdk"]
